--- a/templates/add.html
+++ b/templates/add.html
@@ -12,6 +12,8 @@
         <p><Label>SKU:</Label><input type="text" name="sku" value="" required></p>
         <p><Label>COF:</Label><input type="text" name="cof" value="" required></p>
         <p><Label>Категория:</Label><input type="text" name="category" value="" required></p>
+        <p><Label>Ff-price:</Label><input type="text" name="ff_price" value="" required></p>
+        <p><Label>logistics:</Label><input type="text" name="logistics" value="" required></p>
         <p><input type="submit" value="Добавить"></p>
     </form>
 
